Added a function to repeat a string a number of times.

--- a/index.html
+++ b/index.html
@@ -7,6 +7,6 @@
     <title>Random Functions</title>
 </head>
 <body>
-    <script src="inputArr.js"></script>
+    <script src="repeatStrNumTimes.js"></script>
 </body>
 </html>
