Added a function to truncate a string.

--- a/index.html
+++ b/index.html
@@ -7,6 +7,6 @@
     <title>Random Functions</title>
 </head>
 <body>
-    <script src="repeatStrNumTimes.js"></script>
+    <script src="truncateString.js"></script>
 </body>
 </html>
