Added a function to split an array into a 2D array of size elements.

--- a/index.html
+++ b/index.html
@@ -7,6 +7,6 @@
     <title>Random Functions</title>
 </head>
 <body>
-    <script src="truncateString.js"></script>
+    <script src="chunkyMonkey.js"></script>
 </body>
 </html>
