--- a/index.html
+++ b/index.html
@@ -7,6 +7,6 @@
     <title>Random Functions</title>
 </head>
 <body>
-    <script src="slasher.js"></script>
+    <script src="mutation.js"></script>
 </body>
 </html>
