Changed the linked method to WhereIBelong.js.

--- a/index.html
+++ b/index.html
@@ -7,6 +7,6 @@
     <title>Random Functions</title>
 </head>
 <body>
-    <script src="destroyer.js"></script>
+    <script src="whereibelong.js"></script>
 </body>
 </html>
