--- a/index.html
+++ b/index.html
@@ -7,6 +7,13 @@
     <title>Random Functions</title>
 </head>
 <body>
-    <script src="createCheckDigit.js"></script>
+    <body>
+        In my life, I used the following web search engines:<br/>
+        <a href="//www.yahoo.com">Yahoo!</a><br/>
+        <a href="//www.altavista.com">AltaVista</a><br/>
+        <a href="//www.google.com">Google</a><br/>
+      </body>
+
+    <script src="registerHandlers.js"></script>
 </body>
 </html>
