Changed the main method to newMessage.js.

--- a/index.html
+++ b/index.html
@@ -7,13 +7,12 @@
     <title>Random Functions</title>
 </head>
 <body>
-    <body>
-        In my life, I used the following web search engines:<br/>
-        <a href="//www.yahoo.com">Yahoo!</a><br/>
-        <a href="//www.altavista.com">AltaVista</a><br/>
-        <a href="//www.google.com">Google</a><br/>
-      </body>
+    <div>
+        <p data-topic-name="discussion">General discussion</p>
+        <p data-topic-name="bugs">Bugs</p>
+        <p data-topic-name="animals">Animals</p>
+      </div>
 
-    <script src="registerHandlers.js"></script>
+    <script src="newMessage.js"></script>
 </body>
 </html>
