--- a/index.html
+++ b/index.html
@@ -7,12 +7,11 @@
     <title>Random Functions</title>
 </head>
 <body>
-    <div>
-        <p data-topic-name="discussion">General discussion</p>
-        <p data-topic-name="bugs">Bugs</p>
-        <p data-topic-name="animals">Animals</p>
-      </div>
+    <div id='numbers'>
+        <span>1</span><span>2</span><span>3</span><span>4</span><span>5</span>
+        <button id='btn' onclick='toggleEvenColor()'>Toggle even number highlighting</button>
+    </div>
 
-    <script src="newMessage.js"></script>
+    <script src="toggleEvenColour.js"></script>
 </body>
 </html>
